--- a/package.json
+++ b/package.json
@@ -6,17 +6,31 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@base-ui/react": "^1.1.0",
+    "@fontsource/outfit": "^5.2.8",
+    "@tabler/icons-react": "^3.36.1",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/query-core": "^5.90.18",
+    "@tanstack/react-query": "^5.90.18",
+    "@tanstack/react-router": "^1.150.0",
+    "@tanstack/react-router-devtools": "^1.150.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.17"
+    "react-scan": "^0.4.3",
+    "shadcn": "^3.6.3",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tanstack/router-plugin": "^1.150.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
